[metadata]
name = cloud-emulator
version = 0.1
summary = emulator of different clouds, such as vmware and aws
description-file =
    README.md

author = back1860

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    cloud-emulator

data_files =
    /etc/cloud-emulator/ = etc/cloud-emulator/*

[entry_points]
console_scripts =
    bluecloude = cloud-emulator.server:api
