[metadata]
name = cloudemulator
version = 0.1
summary = emulator of different clouds, such as vmware and aws
description-file =
    README.md

author = back1860

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    cloudemulator

data_files =
    /etc/cloudemulator/ = etc/cloudemulator/*

[entry_points]
console_scripts =
    bluecloude = cloudemulator.server:rest
